core/codegen/tests/ui/fails/apply/too_many_args.stderr
error: apply! expectes 2 or 3 arguments
 --> $DIR/too_many_args.rs:7:12
  |
7 |     apply!(0, |_| 0, |_| 0, 0);
  |            ^^^^^^^^^^^^^^^^^^
